super weird toggle bug

--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -89,10 +89,10 @@
   >
     <mat-slide-toggle
       class="example-margin"
+      *ngIf="synthButtons"
       [color]="primary"
-      [checked]="checked"
-      [disabled]="disabled"
-      (click)="toggleSynthesisPlayButtons()"
+      [checked]="synthButtons.checked()"
+      (click)="synthButtons.toggle()"
     >
     </mat-slide-toggle>
     <span (click)="toggleRightDrawer('synthesis')">
