move enabled property to synthButtons

--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -84,7 +84,7 @@
   <!-- INLINE SYNTHESIS -->
   <div
     class="optionsBtn optionsPopupBtn"
-    [class.optionsBtnClicked]="synthesisPlayButtonsEnabled"
+    [class.optionsBtnClicked]="synthButtons?.enabled"
     (click)="dontToggle = true"
   >
     <mat-slide-toggle
