hide synth play all / download

--- a/ngapp/src/app/student/synthesis-drawer/synthesis-drawer.component.html
+++ b/ngapp/src/app/student/synthesis-drawer/synthesis-drawer.component.html
@@ -20,7 +20,7 @@
       <span class="speedButton" (click)="changeVoiceSpeed(1)">〉</span>
     </div>
   </div>
-  <div class="synthButtonContainer">
+  <!-- <div class="synthButtonContainer">
     <button [disabled]="!audioLoaded" class="synthButton">
       <div *ngIf="!audioLoaded" class="spinner-grow"></div>
       {{ ts.l.play }}
@@ -29,5 +29,5 @@
       <div *ngIf="!audioLoaded" class="spinner-grow"></div>
       {{ ts.l.download }}
     </button>
-  </div>
+  </div> -->
 </div>
