--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -91,10 +91,11 @@
       class="example-margin"
       [color]="primary"
       (click)="synthButtons?.toggle()"
+      checked="true"
     >
     </mat-slide-toggle>
     <span (click)="toggleRightDrawer('synthesis')">
-      {{ ts.l.audio_check }}
+      {{ ts.l.listen }}
       <i class="fas fa-volume-up optionsBtnIcon"></i>
     </span>
   </div>
