--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -88,7 +88,7 @@
     (click)="dontToggle = true"
   >
     <mat-slide-toggle
-      class="example-margin"
+      class="listenToggle"
       [color]="primary"
       (click)="synthButtons?.toggle()"
       checked="true"
