--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -7,7 +7,7 @@
 .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
     background-color: var(--scealai-green) !important;
 }
-.mat-ripple-element {
+.listenToggle .mat-ripple-element {
     background-color: var(--scealai-light-green) !important;
 }
 
