--- a/ngapp/src/app/nav-bar/fios/fios.component.html
+++ b/ngapp/src/app/nav-bar/fios/fios.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header">
-    Trinity College Dublin – FIoS: Foghlaim le hIntleacht Shaorga
-    <div class="quote">Welcome to FIoS: iCALL for Irish Research Group</div>
+      {{ts.l.fios_title}}
+    <div class="quote">{{ts.l.fios_welcome}}</div>
   </div>
 
   <img class="fiosLogo" src="assets/img/fios_logo_black.png" />
@@ -12,102 +12,61 @@
         <mat-card-title> Céad míle fáilte! </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        At Trinity College Dublin, we are excited to introduce FioS, our
-        cutting-edge research group dedicated to the exploration and integration
-        of Artificial Intelligence (AI) in Irish language teaching and learning.
+        {{ts.l.fios_intro}}
       </mat-card-content>
     </mat-card>
     <br /><br />
 
     <mat-card style="text-align: left">
       <mat-card-header>
-        <mat-card-title> Our Mission </mat-card-title>
+        <mat-card-title> {{ts.l.our_mission}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        Our name, “Fios”, meaning ‘knowledge’, captures the essence of our
-        mission: harnessing the power of Artificial Intelligence to
-        revolutionise how we learn and engage with the Irish language. Speech,
-        as a vital component of language learning, sits at the heart of our
-        endeavours. We believe that every language, especially those like our
-        own native tongue that face the challenges of endangerment, deserves the
-        advantage of modern technology. For such languages, creativity in
-        adaptation becomes imperative, ensuring they not only survive but thrive
-        in the digital age.
+        {{ts.l.fios_mission}}
       </mat-card-content>
     </mat-card>
     <br /><br />
 
     <mat-card style="text-align: left">
       <mat-card-header>
-        <mat-card-title> What We Do </mat-card-title>
+        <mat-card-title> {{ts.l.what_we_do}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        Our primary focus at FioS is to create speech and language
-        technology-based tools and resources tailored the needs of our Irish
-        language learners. These tools are meticulously crafted in close
-        collaboration with teachers and the broader Irish-language community,
-        aiming to be both pedagogically sound and aligned with real-world
-        learning needs. Our objective is to ensure that the learning experience
-        is not only technologically advanced but also educationally effective,
-        bringing the rich tapestry of the Irish language to every learner.
+        {{ts.l.what_we_do_1}}
         <br /><br />
-        FIoS has naturally evolved from the pioneering work carried out as part
-        of the ABAIR initiative, which develops the core speech technologies,
-        text-to-speech (TTS) synthesis and automatic speech recognition (ASR).
-        Our close collaboration with ABAIR not only equips us with
-        state-of-the-art multidialect speech technologies, but also fortifies
-        our resolve to make Irish more accessible and engaging.
+        {{ts.l.what_we_do_2}}
         <br /><br />
-        Our goal goes beyond the integration of advanced technologies. We strive
-        to bring the living language directly to every learner. We envision a
-        learning environment where every learner, regardless of their background
-        or resources, reaps the benefits of a great teacher – by design, not by
-        chance.
+        {{ts.l.what_we_do_3}}
       </mat-card-content>
     </mat-card>
     <br /><br />
 
     <mat-card style="text-align: left">
       <mat-card-header>
-        <mat-card-title> Key CALL for Irish Initiatives: </mat-card-title>
+        <mat-card-title> {{ts.l.key_CALL_for_irish_initiatives}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
         <ol>
           <li>
-            An Scéalaí Interactive Learning Platform: we are constructing an
-            iCALL platform for Irish which is tailored to provide personalised
-            learning experiences, which adapt responsively to a learner’s pace,
-            strengths, and areas for improvement.
+            <b>{{ts.l.an_scealai_interactive_learning_platform}}:</b> {{ts.l.key_CALL_1}}
           </li>
           <li>
-            An Bat Mírialta: an irregular (verb) bot where learners can interact
-            with an irregular verb tutor, practice the 11 irregular verbs in
-            various tenses and forms
+            <b>An Bat Mírialta:</b> {{ts.l.key_CALL_2}}
           </li>
           <li>
-            Cén Scéal: a prompt generator to help inspire the beginning of a
-            story
+            <b>Cén Scéal:</b> {{ts.l.key_CALL_3}}
           </li>
           <li>
-            LARA: the Learning and Reading Assistant, a collaboration with the
-            University of Geneva to produce a multimodal version of traditional
-            texts. Much grammar information is included. In Irish LARA
-            text-to-speech is central and helps learners can become familiar
-            with letter to sound correspondences
+            <b>LARA:</b> {{ts.l.key_CALL_4}}
           </li>
           <li>
-            Dictogloss: a traditional text reconstruction exercise – a
-            text-to-speech voice can read the prompt aloud as many times as
-            suits the learner
+            <b>{{ts.l.dictogloss_snatu}}:</b> {{ts.l.key_CALL_5}}
           </li>
           <li>
-            Taidhgín: a chatbot, conversational partner who can hold a basic
-            conversation on many different areas such as family, home, holidays,
-            etc.
+            <b>Taidhgín:</b> {{ts.l.key_CALL_6}}
           </li>
           <li>
-            An Corpas Cliste: a learner corpus being gathered from the An
-            Scéalaí iCALL platform
+            <b>An Corpas Cliste:</b> {{ts.l.key_CALL_7}}
           </li>
         </ol>
       </mat-card-content>
@@ -117,38 +76,19 @@
     <mat-card style="text-align: left">
       <mat-card-header>
         <mat-card-title>
-          Core Technologies employed for Irish iCALL - the ABAIR initiative:
+          {{ts.l.core_technologies_employed_for_CALL}}
         </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
         <ol>
           <li>
-            Text-to-Speech synthesis: transforms written Irish content into
-            natural, comprehensible spoken output. The integration of the ABAIR
-            synthetic voices, which offer native speaker models for the three
-            main dialects of Irish, is invaluable in assisting learners to
-            reinforce the linkages between the spoken Irish language and its
-            written forms. By creating an immersive environment where speech is
-            inextricably linked with reading and writing activities, learners
-            are continually exposed to native spoken language, setting native
-            speaker pronunciation as the benchmark.
+            <b>{{ts.l.text_to_speech_synthesis}}:</b> {{ts.l.core_technologies_1}}
           </li>
           <li>
-            Speech Recognition for Irish: our systems can transcribe spoken
-            Irish, providing instant feedback to learners on pronunciation. By
-            embedding ASR within language learning platforms, we foster an
-            environment where the spoken word is placed centre stage. This marks
-            a significant shift from the traditional text-centric language
-            learning methods, heralding a new era of instruction and engagement
-            that leverages technology in ways previously unattainable.
+            <b>{{ts.l.speech_recognition_for_irish}}:</b> {{ts.l.core_technologies_2}}
           </li>
           <li>
-            Natural Language Processing (NLP) for Irish: Within An Scéalaí we
-            benefit from the foundational work of Kevin Scannell’s who is behind
-            the development of the grammar checker, An Gramadóir. Concurrently
-            we are actively evolving, using learner input to develop our own
-            spelling and grammar checking modules, ensuring feedback is both
-            precise and relevant to our learners’ needs.
+            <b>{{ts.l.nlp_for_irish}}:</b> {{ts.l.core_technologies_3}}
           </li>
         </ol>
       </mat-card-content>
@@ -157,34 +97,29 @@
 
     <mat-card style="text-align: left">
       <mat-card-header>
-        <mat-card-title> Collaboration & Outreach </mat-card-title>
+        <mat-card-title> {{ts.l.collaboration_and_outreach}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        We are eager to collaborate with educators, technologists, linguists and
-        Irish language enthusiasts. Our goal is to create a community where
-        knowledge, expertise, and passion for the Irish language intersect.
+        {{ts.l.collaboration_and_outreach_text}}
       </mat-card-content>
     </mat-card>
     <br /><br />
 
     <mat-card style="text-align: left">
       <mat-card-header>
-        <mat-card-title> Join Us </mat-card-title>
+        <mat-card-title> {{ts.l.join_us}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        Whether you’re a student keen on participating in our research projects,
-        an educator wanting to integrate our tools into your teaching, or
-        someone enthusiastic about the future of the Irish language, we invite
-        you to join us in our mission.
+        {{ts.l.join_us_text}}
       </mat-card-content>
       <mat-card-header>
-        <mat-card-title> Contact Us </mat-card-title>
+        <mat-card-title> {{ts.l.contact_us}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        Address: FIoS Research Group, The Phonetics & Speech Lab., Trinity
+        <b>{{ts.l.address}}</b>: FIoS Research Group, The Phonetics & Speech Lab., Trinity
         College Dublin, College Green, Dublin 2, Ireland
         <br /><br />
-        Email: scealai.info@tcd.ie
+        <b>{{ts.l.email}}</b>: <a href='mailto:scealai.info@gmail.com'>scealai.info@gmail.com</a>
       </mat-card-content>
     </mat-card>
 
@@ -192,17 +127,13 @@
 
     <mat-card style="text-align: left">
       <mat-card-header>
-        <mat-card-title> Updates & News </mat-card-title>
+        <mat-card-title> {{ts.l.updates_and_news}} </mat-card-title>
       </mat-card-header>
       <mat-card-content class="textContent">
-        Stay tuned for our latest research findings, tool releases, and events.
-        Be a part of the FIoS community!
+        {{ts.l.updates_and_news_1}}
         <br /><br />
         <i>
-          We at Trinity College Dublin are proud to be at the forefront of
-          integrating technology and tradition. With FIoS, we are bridging the
-          past and future, ensuring that our rich linguistic heritage remains
-          relevant and accessible to all.
+          {{ts.l.updates_and_news_2}}
         </i>
       </mat-card-content>
     </mat-card>
