--- a/ngapp/src/app/student/home-page/home-page.component.scss
+++ b/ngapp/src/app/student/home-page/home-page.component.scss
@@ -21,6 +21,10 @@ mat-card {
     min-width: 500px;
 }
 
+.dashSubButton {
+    margin-bottom: 10px;
+}
+
 .main:hover,
 .dashSubButton:hover {
     background-color: rgba(#568162, 0.3);
