--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -106,7 +106,7 @@
     [class.optionsBtnClicked]="rightDrawerOpened && selectedDrawer == 'grammar'"
     (click)="dontToggle = true; toggleRightDrawer('grammar')"
   >
-    {{ ts.l.grammar_errors }}
+    {{ ts.l.grammar_checker }}
     <i class="fas fa-spell-check optionsBtnIcon"></i>
   </div>
 
