--- a/ngapp/src/app/student/grammar-error-drawer/grammar-error-drawer.component.html
+++ b/ngapp/src/app/student/grammar-error-drawer/grammar-error-drawer.component.html
@@ -1,7 +1,7 @@
 <!-- HEADER -->
 <div class="dictionaryHeader">
   <h5>
-    {{ ts.message("grammar_errors") }}
+    {{ ts.l.grammar_checker }}
   </h5>
   <div class="closeDictionaryBtn" (click)="closeGrammarEmitter.next(true)">
     <i class="fa fa-times"></i>
