show selection word count

--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -150,6 +150,7 @@
         [(ngModel)]="story.htmlText"
         (onContentChanged)="onContentChanged($event)"
         (onEditorCreated)="onEditorCreated($event)"
+        (onSelectionChanged)="getWordCountSelectedText($event)"
       ></quill-editor>
     </div>
 
