--- a/ngapp/src/app/student/synthesis-drawer/synthesis-drawer.component.html
+++ b/ngapp/src/app/student/synthesis-drawer/synthesis-drawer.component.html
@@ -1,7 +1,7 @@
 <div class="synthesisContainer">
   <div class="synthesisHeader">
     <h5> {{ ts.l["listen_back_to_your_story"] ? ts.l["listen_back_to_your_story"] : "listen_back_to_your_story" }} </h5>
-    <div class="closeDictionaryBtn" (click)="closeSynthesisEmitter.next(true)">
+    <div class="closeDictionaryBtn" (click)="closeDrawer()">
       <i class="fa fa-times"></i>
     </div>
   </div>
@@ -21,9 +21,9 @@
     </div>
   </div>
   <div class="synthButtonContainer">
-    <button [disabled]="!audioLoaded" class="synthButton" (click)="test6()">
+    <button [disabled]="!audioLoaded" class="synthButton" (click)="playAllAudio()">
       <div *ngIf="!audioLoaded" class="spinner-grow"></div>
-      {{ ts.l.play }}
+      {{ isPlaying? 'Pause' : ts.l.play }}
     </button>
     <button [disabled]="!audioLoaded" class="synthButton">
       <div *ngIf="!audioLoaded" class="spinner-grow"></div>
