--- a/ngapp/src/app/student/synthesis-drawer/synthesis-drawer.component.scss
+++ b/ngapp/src/app/student/synthesis-drawer/synthesis-drawer.component.scss
@@ -42,10 +42,14 @@
     padding: 5px;
     border-radius: 5px;
     border: none;
-    width: 100px;
+    min-width: 100px;
     text-align: center;
     background-color: var(--scealai-green);
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
 }
 
 .synthButton:hover:enabled{
