--- a/ngapp/src/app/student/home-page/home-page.component.scss
+++ b/ngapp/src/app/student/home-page/home-page.component.scss
@@ -16,6 +16,10 @@ mat-card {
     background-color: rgba(#70a87f, 0.3);
 }
 
+mat-card-title {
+    margin-left: -15px;
+}
+
 .dashButton {
     width: 500px;
     min-width: 500px;
