--- a/ngapp/src/app/login/login.component.html
+++ b/ngapp/src/app/login/login.component.html
@@ -28,7 +28,7 @@
           name="password"
           [(ngModel)]="credentials.password"
         />
-        <div class="forgotPassword" (click)="forgotPassword = true; errorMessage = '';" >
+        <div class="forgotPassword" (click)="forgotPassword = true;" >
           {{ ts.l.forgot_password }}
         </div>
         <br />
@@ -76,7 +76,6 @@
     <p class="formLabel">
       {{ ts.l.email_address }}: <strong>{{ frozenCredentials.email }}</strong>
     </p>
-    <div *ngIf="loginErrorText" class="errorMessage">{{ loginErrorText }}</div>
     <button class="btn loginBtn" (click)="login()">{{ ts.l.sign_in }}</button>
     <div *ngFor="let msg of waitingErrorTextKeys" class="errorMessage">
       {{ ts.l[msg] ? ts.l[msg] : msg }}
