--- a/ngapp/src/app/nav-bar/fios/fios.component.html
+++ b/ngapp/src/app/nav-bar/fios/fios.component.html
@@ -60,7 +60,7 @@
             <b>LARA:</b> {{ts.l.key_CALL_4}}
           </li>
           <li>
-            <b>{{ts.l.dictogloss_snatu}}:</b> {{ts.l.key_CALL_5}}
+            <b>{{ts.l.dictogloss}}:</b> {{ts.l.key_CALL_5}}
           </li>
           <li>
             <b>Taidhgín:</b> {{ts.l.key_CALL_6}}
