--- a/ngapp/src/app/student/home-page/home-page.component.html
+++ b/ngapp/src/app/student/home-page/home-page.component.html
@@ -32,7 +32,7 @@
     <div>
       <mat-card routerLink="/dictogloss" class="dashButton main">
         <mat-card-header>
-          <mat-card-title> {{ ts.l.dictogloss_snatu }} </mat-card-title>
+          <mat-card-title> {{ ts.l.dictogloss }} </mat-card-title>
         </mat-card-header>
         <mat-card-content> {{ ts.l.dictogloss_description }} </mat-card-content>
       </mat-card>
